--- a/TecAirWebApp/package.json
+++ b/TecAirWebApp/package.json
@@ -9,7 +9,8 @@
     "angular": "^1.7.5",
     "angular-loader": "^1.7.5",
     "angular-route": "^1.7.5",
-    "html5-boilerplate": "0.0.1"
+    "angular-ui-bootstrap": "^2.5.6",
+    "bootstrap": "^4.3.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.7.5",
