--- a/TecAirWebApp/package.json
+++ b/TecAirWebApp/package.json
@@ -12,6 +12,7 @@
     "angular-resource": "1.7.x",
     "angular-route": "^1.7.8",
     "angular-touch": "1.7.x",
+    "angular-sanitize": "1.7.x",
     "angular-ui-bootstrap": "2.5.x",
     "bootstrap": "3.3.x",
     "jquery": "3.3.x"
