--- a/TEST/TEST/Web.config
+++ b/TEST/TEST/Web.config
@@ -15,6 +15,9 @@
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
   <system.webServer>
+    <cors enabled="true">
+      <add origin="*" />
+    </cors>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
       <remove name="OPTIONSVerbHandler"/>
