--- a/TecAirWebApp/package.json
+++ b/TecAirWebApp/package.json
@@ -6,17 +6,18 @@
   "repository": "https://github.com/deibergv/D4t4B4s3s---TEC41rl1n3s",
   "license": "MIT",
   "dependencies": {
-    "@uirouter/angularjs": "^1.0.22",
     "angular": "1.7.x",
     "angular-animate": "1.7.x",
     "angular-loader": "1.7.x",
     "angular-resource": "1.7.x",
-    "angular-route": "^1.7.8",
+    "angular-route": "1.7.x",
     "angular-sanitize": "1.7.x",
     "angular-touch": "1.7.x",
     "angular-ui-bootstrap": "2.5.x",
     "bootstrap": "3.3.x",
-    "jquery": "^3.4.0"
+    "jquery": "^3.4.0",
+    "angular-ui-router": "^1.0.22",
+    "font-awesome": "4.5.x"
   },
   "devDependencies": {
     "angular-mocks": "1.7.x",
@@ -33,7 +34,7 @@
     "postinstall": "npm run copy-libs",
     "update-deps": "npm update",
     "postupdate-deps": "npm run copy-libs",
-    "copy-libs": "cpx \"node_modules/{angular,angular-*,bootstrap/dist,jquery/dist}/**/*\" app2/lib -C",
+    "copy-libs": "cpx \"node_modules/{angular,angular-*,bootstrap/dist,jquery/dist,font-awesome}/**/*\" app2/lib -C",
     "prestart": "npm install",
     "start": "http-server ./app2 -a localhost -p 8000 -c-1",
     "pretest": "npm install",
