Home with login and main Info showing.

--- a/TecAirWebApp/package.json
+++ b/TecAirWebApp/package.json
@@ -6,25 +6,25 @@
   "repository": "https://github.com/deibergv/D4t4B4s3s---TEC41rl1n3s",
   "license": "MIT",
   "dependencies": {
-    "angular": "1.7.x",
-    "angular-animate": "1.7.x",
-    "angular-loader": "1.7.x",
-    "angular-resource": "1.7.x",
-    "angular-route": "1.7.x",
-    "angular-sanitize": "1.7.x",
-    "angular-touch": "1.7.x",
+    "angular": "^1.7.8",
+    "angular-cookies": "^1.7.8",
+    "angular-animate": "^1.7.8",
+    "angular-loader": "^1.7.8",
+    "angular-resource": "^1.7.8",
+    "angular-sanitize": "^1.7.8",
+    "angular-touch": "^1.7.8",
     "angular-ui-bootstrap": "2.5.x",
     "bootstrap": "3.3.x",
     "jquery": "^3.4.0",
     "angular-ui-router": "^1.0.22",
-    "font-awesome": "4.5.x"
+    "font-awesome": "^4.5.0"
   },
   "devDependencies": {
-    "angular-mocks": "1.7.x",
+    "angular-mocks": "^1.7.8",
     "cpx": "^1.5.0",
     "http-server": "^0.11.1",
     "jasmine-core": "^3.3.0",
-    "karma": "^3.1.1",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "^1.1.2",
